Fix touch selection interference on mobile
- Add user-select: none to prevent text/element selection
- Add touch-callout: none for iOS
- Add user-drag: none to prevent drag interference
- Fixes issue where arrows get selected during touch gameplay

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,19 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  /* Prevent text selection on touch devices */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  /* Prevent touch callout on iOS */
+  -webkit-touch-callout: none;
+  /* Prevent drag on touch devices */
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
 
 .logo {
